@@ -1,3 +1,7 @@
+2007-04-30  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_3ds.*: work is go on
+	
 2007-04-28  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf_3ds.*: added camera
